# botwork

./: .earthlyignore  .gitignore  .yamllint  CONTRIBUTING.md  Cargo.toml  Earthfile  Makefile  README.md  deny.toml  tarpaulin.toml
.github/: dependabot.yml
admin-api/: Cargo.toml  Dockerfile  README.md  smoke.sh
admin-api/src/: control_plane.rs  handler.rs  lib.rs  main.rs  read.rs  secret_store.rs  write.rs
admin-api/tests/: integration.rs  secrets_integration.rs
admin-core/: Cargo.toml  README.md
admin-core/src/: config.rs  error.rs  lib.rs  package.rs  plugin_spec.rs
admin-ui/: Dockerfile  README.md  smoke.sh
admin-ui/wasm/: Cargo.toml  Trunk.toml  admin.css  index.html
admin-ui/wasm/src/: api.rs  layout.rs  lib.rs
admin-ui/wasm/src/pages/: bindings.rs  mod.rs  plugins.rs  sessions.rs  stub.rs  tenants.rs  workers.rs  workspaces.rs
api/: Cargo.toml  Dockerfile  README.md  smoke.sh
api-core/: Cargo.toml  README.md
api-core/src/: config.rs  error.rs  lib.rs  names.rs  package.rs  plugin_spec.rs
auth-broker/: Cargo.toml  Dockerfile  README.md  SECURITY.md  smoke.sh
auth-broker/src/: admin.rs  cache.rs  caps.rs  config.rs  error_response.rs  grammar.rs  handler.rs  lib.rs  main.rs  metrics.rs  secrets.rs
auth-broker/src/auth/: endpoints.rs  lease.rs  lease_kek.rs  mod.rs  opaque.rs  pending.rs  rate_limit.rs
auth-broker/src/store/: mock.rs  mod.rs  sea_orm_impl.rs
auth-broker/tests/: admin_revoke.rs  basic.rs  bearer_kek_round_trip.rs  cache.rs  cap_lease_cohort.rs  handler_lease_paths.rs  integration.rs  lease_export_key_ttl.rs  lease_store_unit.rs  log_redaction.rs  opaque_dummy.rs  opaque_e2e.rs  opaque_error_arms.rs  rate_limit.rs  remote_secrets.rs  restart_preserves_leases.rs  sea_orm_mock_unit.rs  secrets_fetch.rs  secrets_write.rs  structured_401.rs  ttl_config.rs  zeroize_audit.rs
auth-broker/tests/common/: mod.rs
bootstrap/: Cargo.toml  Dockerfile  README.md  smoke.sh
bootstrap/src/: config.rs  error.rs  lib.rs  main.rs  plugin_spec.rs  runner.rs  test_support.rs
bootstrap/src/store/: mock.rs  mod.rs  sea_orm_impl.rs
bootstrap/tests/: bootstrap_smoke.rs  sea_orm_mock_unit.rs
botctl/: Cargo.toml
botwork-cli/: README.md
botwork-login/: Cargo.toml  README.md
botwork-login/src/: client.rs  config.rs  error.rs  keyring_store.rs  lib.rs  main.rs
botwork-login/src/commands/: env.rs  login.rs  logout.rs  mod.rs  register.rs  status.rs
botwork-login/tests/: error_mapping.rs  login_round_trip.rs
cli/: Cargo.toml
cli/src/: client.rs  config.rs  duration.rs  error.rs  keyring_store.rs  lib.rs
cli/src/commands/: env.rs  input.rs  login.rs  logout.rs  register.rs  status.rs
config-broker/: Cargo.toml  Dockerfile  README.md  smoke.sh
config-broker/src/: handler.rs  lib.rs  main.rs  registry.rs  test_support.rs
config-broker/tests/: integration.rs
containers/: Makefile  README.md
control-plane/: Cargo.toml  Dockerfile  README.md  smoke.sh
control-plane/src/: handler.rs  lib.rs  main.rs  policy.rs  recovery.rs  session_broker.rs  sessions.rs  xds.rs
control-plane/tests/: integration.rs  recovery_test.rs  xds_test.rs
ctl/: Cargo.toml  README.md
ctl/src/: cli.rs  lib.rs  main.rs
ctl/src/admin_key/: mod.rs
ctl/src/bootstrap/: apply.rs  client.rs  mod.rs
ctl/src/mcp_probe/: compose.rs  docker.rs  mod.rs  patch.rs  probe.rs  verify.rs
ctl/src/ps/: docker.rs  mod.rs  render.rs  sessions.rs
ctl/tests/: bootstrap_apply_test.rs  mcp_probe_smoke.rs  ps_render.rs  ps_sessions.rs
db/: README.md
db/entity/: Cargo.toml
db/entity/src/: agent_session.rs  connection.rs  lease.rs  lib.rs  opaque_password_file.rs  plugin.rs  plugin_image_facet.rs  session_worker.rs  tenant.rs  workspace.rs  workspace_plugin.rs
db/migration/: Cargo.toml  Dockerfile  smoke.sh
db/migration/src/: lib.rs  m20260620_000001_create_core_tables.rs  m20260620_000002_extend_plugin_schema.rs  m20260622_000001_create_agent_session.rs  m20260622_000002_create_session_worker.rs  m20260624_000001_create_auth_tables.rs  m20260625_000001_create_plugin_image_facet.rs  main.rs
db/migration/tests/: migrate_smoke.rs  no_env_leakage.rs  testcontainers_isolation.rs
launcher/: Cargo.toml  README.md
launcher/src/: cmd.rs  config.rs  docker.rs  error.rs  events.rs  lib.rs  main.rs  mount.rs  server.rs  validate.rs
launcher/tests/: wire_contract.rs
opaque-handshake/: Cargo.toml  README.md
opaque-handshake/src/: lib.rs
session-broker/: Cargo.toml  Dockerfile  README.md  smoke.sh
session-broker/src/: admin.rs  agent_session.rs  config_broker.rs  control_plane.rs  docker.rs  exit_listener.rs  ext_proc.rs  launcher.rs  lib.rs  main.rs  plugin_registry.rs  recovery.rs  secrets.rs  session_registry.rs  session_worker.rs  sweeper.rs
session-broker/src/store/: mock.rs  mod.rs  sea_orm_impl.rs
session-broker/tests/: agent_session_writethrough_test.rs  control_plane_test.rs  exit_listener_test.rs  ext_proc_test.rs  integration_tests.rs  liveness_test.rs  sea_orm_mock_unit.rs
test-support/: Cargo.toml
tools/: Cargo.toml  README.md
tools/src/: cli.rs  lib.rs  main.rs
tools/src/bootstrap/: apply.rs  client.rs  mod.rs
tools/src/frontdoor/: mod.rs  probe.rs  rds.rs
tools/src/mcp_probe/: compose.rs  mod.rs  package.rs  patch.rs  probe.rs  verify.rs
tools/src/ps/: docker.rs  mod.rs  registry.rs  sessions.rs
tools/tests/: bootstrap_apply_test.rs  frontdoor_run.rs  mcp_probe_smoke.rs  ps_registry.rs  ps_render.rs  ps_sessions.rs
tools/tests/fixtures/: registry_missing_sessions.json  registry_valid.json
ui/: Dockerfile  (+2 more)
ui/server/: Cargo.toml
ui/server/src/: handler.rs  lib.rs  main.rs
ui/server/tests/: integration.rs
vault/: Cargo.toml  README.md
vault/fuzz/: Cargo.toml  README.md
vault/fuzz/fuzz_targets/: fuzz_open_contents.rs
vault/src/: atomic.rs  contents.rs  error.rs  kdf.rs  lib.rs  lock.rs  path.rs  public.rs  vault.rs
vault/tests/: cli.rs  cli_errors.rs  concurrent.rs  corruption.proptest-regressions  corruption.rs  log_redaction.rs  metadata.rs  on_disk.rs  path_validation.rs  pubkey.rs  roundtrip.rs  tamper.rs
(+86 files in other folders)
