[workspace]
resolver = "2"
members = [
    "admin-api",
    "admin-core",
    "admin-ui/server",
    "admin-ui/wasm",
    "bootstrap",
    "config-broker",
    "control-plane",
    "db/entity",
    "db/migration",
    "launcher",
    "session-broker",
    "tools",
]

# Default set for bare `cargo build` / `cargo test` (no `--workspace`).
# Excludes `admin-ui/wasm` because that crate only links against the
# `wasm32-unknown-unknown` target — building it for the host pulls in
# wasm-bindgen / web-sys against native, which is at best a long
# compile and at worst a hard link failure. CI exercises the wasm
# crate explicitly with `--target wasm32-unknown-unknown` and the
# container image builds it via `trunk build --release`.
default-members = [
    "admin-api",
    "admin-ui/server",
    "bootstrap",
    "config-broker",
    "control-plane",
    "db/entity",
    "db/migration",
    "launcher",
    "session-broker",
    "tools",
]

# Abort on panic in release builds. This removes the stack unwinder and
# its dependency on libgcc_s.so.1, so the binaries run on distroless
# base-nossl-debian12 with no extra runtime libraries. Server daemons
# in this workspace are expected to die on panic and be restarted by
# systemd / the container runtime; we don't rely on Drop running during
# a panic or on catch_unwind. Dev/debug builds keep the default unwind
# behaviour for better diagnostics.
[profile.release]
panic = "abort"
