[workspace]
resolver = "2"
members = [
    "api",
    "api-core",
    "auth-broker",
    "ui/server",
    "ui/wasm",
    "bootstrap",
    "cli",
    "config-broker",
    "control-plane",
    "db/entity",
    "db/migration",
    "launcher",
    "opaque-handshake",
    "session-broker",
    "ctl",
    "test-support",
    "vault",
    "version",
]

# Default set for bare `cargo build` / `cargo test` (no `--workspace`).
# Excludes `ui/wasm` because that crate only links against the
# `wasm32-unknown-unknown` target — building it for the host pulls in
# wasm-bindgen / web-sys against native, which is at best a long
# compile and at worst a hard link failure. CI exercises the wasm
# crate explicitly with `--target wasm32-unknown-unknown` and the
# container image builds it via `trunk build --release`.
default-members = [
    "api",
    "auth-broker",
    "ui/server",
    "bootstrap",
    "cli",
    "config-broker",
    "control-plane",
    "db/entity",
    "db/migration",
    "launcher",
    "session-broker",
    "ctl",
    "vault",
    "version",
]

# Workspace-wide lint policy. Inherited by every member crate via
# `[lints] workspace = true` in their `Cargo.toml`. The set is
# intentionally tiny:
#
# * `unsafe_code = "forbid"` — we don't write `unsafe` outside of
#   tests, full stop. `forbid` (vs `deny`) means a downstream
#   `#![allow(unsafe_code)]` cannot re-enable it; a future PR that
#   needs an `unsafe` block has to first change the policy here in a
#   stand-alone commit, which gets reviewed on its own merits.
#
# Any expansion belongs in a separate PR with its own justification —
# this block is a policy gate, not a style sheet.
[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[workspace.dependencies]
serial_test = "3"

# Abort on panic in release builds. This removes the stack unwinder and
# its dependency on libgcc_s.so.1, so the binaries run on distroless
# base-nossl-debian12 with no extra runtime libraries. Server daemons
# in this workspace are expected to die on panic and be restarted by
# systemd / the container runtime; we don't rely on Drop running during
# a panic or on catch_unwind. Dev/debug builds keep the default unwind
# behaviour for better diagnostics.
[profile.release]
panic = "abort"
