[package]
name = "botwork-admin-api"
version = "0.0.0"
edition = "2021"

[lib]
name = "botwork_admin_api"
path = "src/lib.rs"

[[bin]]
name = "botwork-admin-api"
path = "src/main.rs"

[dependencies]
axum = "0.7"
# botwork-admin-core: shared per-entry validators between admin-api and
# bootstrap (RFE #106 PR2 extraction). v0 reads don't need them; PR3's
# write endpoints do. Keeping the dep in [dependencies] from PR2 means
# the admin-core code is already in the workspace's binary plan when
# write handlers land, no further infra churn.
botwork-admin-core = { path = "../admin-core" }
botwork-entity = { path = "../db/entity" }
sea-orm = { version = "1.1.20", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
# Same posture as config-broker: spin a real postgres via testcontainers,
# apply migrations + a fixture bootstrap, then exercise the HTTP surface.
# Both crates stay under [dev-dependencies] per the RFE #97 rail enforced
# in `db/migration/tests/testcontainers_isolation.rs`.
botwork-bootstrap = { path = "../bootstrap" }
botwork-migration = { path = "../db/migration" }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sea-orm-migration = { version = "1.1.20", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde_yaml = "0.9"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tower = { version = "0.4", features = ["util"] }
