[package]
name = "botwork-admin-api"
version = "0.0.0"
edition = "2021"

[lib]
name = "botwork_admin_api"
path = "src/lib.rs"

[[bin]]
name = "botwork-admin-api"
path = "src/main.rs"

[dependencies]
axum = "0.7"
# botwork-admin-core: per-entry validators shared with bootstrap
# (RFE #106 PR2 extraction). PR3 consumes them on the write side
# (validate_one for plugin POST/PUT, ValidationError -> ApiError).
botwork-admin-core = { path = "../admin-core" }
botwork-entity = { path = "../db/entity" }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
regex = "1"
# Live-state coupling against control-plane (RFE #106 PR3). reqwest
# is also pulled in by sea-orm-migration on the dev side; sharing the
# major here keeps the lockfile resolution monomorphic.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sea-orm = { version = "1.1.20", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
# Same posture as config-broker: spin a real postgres via testcontainers,
# apply migrations + a fixture bootstrap, then exercise the HTTP surface.
# Both crates stay under [dev-dependencies] per the RFE #97 rail enforced
# in `db/migration/tests/testcontainers_isolation.rs`.
botwork-bootstrap = { path = "../bootstrap" }
botwork-migration = { path = "../db/migration" }
http = "1"
# wiremock spins a localhost HTTP server in-process so the live-state
# coupling tests don't need a real control-plane. Same crate
# session-broker uses to stub control-plane's POST /sessions in its
# own integration tests (post-#92).
wiremock = "0.6"
sea-orm-migration = { version = "1.1.20", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tower = { version = "0.4", features = ["util"] }

[lints]
workspace = true
