[package]
name = "botwork-api-core"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "botwork_api_core"
path = "src/lib.rs"

# Pure-library crate: validators + the static metadata that turns
# operator-facing yaml/JSON into the shape `botwork-entity` writes.
# Consumed by both `botwork-bootstrap` (today's writer, throwaway) and
# `botwork-api` (the writer that replaces it under RFE #106).
#
# Deliberately NOT a sea-orm dep. The validators read declarative
# field shapes (image, port, path, …); the DB layer is the consumer
# of the validated output, not the source of truth for the rules.
# Keeping this dep-light makes the crate compile fast and stays out
# of the way of the runtime/tokio feature graph the binaries pull in.
[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

[lints]
workspace = true
