[package]
name = "botwork-bootstrap"
version = "0.0.0"
edition = "2021"

# Test-only sea-orm seed helper.
#
# Historically this crate also produced a `botwork-bootstrap` binary
# + a `botwork/bootstrap:local` container that ran as a systemd
# oneshot at boot. That production codepath was retired in RFE #106
# PR4 (botwork#118 + the vm-side cutover) in favour of
# `botwork-tools bootstrap` calling api. The container,
# Earthfile target, and CI plumbing are gone; this crate now only
# survives as a fast in-process seed helper for the three integration
# tests under `api/`, `config-broker/`, and `session-broker/`
# (going through api in those would cost ~3x setup for no
# additional signal).
[lib]
name = "botwork_bootstrap"
path = "src/lib.rs"

[dependencies]
# api-core owns the bootstrap-config shape + validators; this
# crate is just the sea-orm writer that walks a validated tree.
botwork-api-core = { path = "../api-core" }
botwork-entity = { path = "../db/entity" }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
sea-orm = { version = "1.1.20", default-features = false, features = [
    "mock",
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
# RFE 97 rail: testcontainers stays out of [dependencies]. Enforced in CI
# by db/migration/tests/testcontainers_isolation.rs (which walks every
# workspace member, including this one).
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
botwork-migration = { path = "../db/migration" }
tempfile = "3"
# Re-declared here for the test_smoke harness; everywhere else in
# this crate uses chrono::Utc from the main [dependencies] above.
serde_yaml = "0.9"
sea-orm = { version = "1.1.20", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
sea-orm-migration = { version = "1.1.20", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
