[package]
name = "botwork-login"
version = "0.0.0"
edition = "2021"

[lib]
name = "botwork_login"
path = "src/lib.rs"

[[bin]]
name = "botwork-login"
path = "src/main.rs"

[dependencies]
botwork-opaque-handshake = { path = "../opaque-handshake" }
botwork-version = { git = "https://github.com/botworkz/botwork", tag = "v0.3.16" }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
# `humantime::parse_duration` for `--lease 7d` / `--lease 12h`.
humantime = "2"
rand = "0.8"
# Pull rustls-tls explicitly so we don't drag openssl into the
# distroless container shape auth-broker is packaged in.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Password prompt (no echo) — matches the vault CLI's choice.
rpassword = "7"
# URL parsing + validation for the --server flag.
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = { version = "1", features = ["derive"] }

[features]
default = []
# Same test-support gate the rest of the workspace uses. Integration
# tests that drive a real auth-broker / postgres via testcontainers
# turn on under this feature so a stock `cargo test --workspace` stays
# green without docker.
test-support = ["botwork-auth-broker/test-support"]

[dev-dependencies]
axum = "0.7"
botwork-auth-broker = { path = "../auth-broker" }
botwork-entity = { git = "https://github.com/botworkz/botwork", tag = "v0.3.13" }
botwork-migration = { git = "https://github.com/botworkz/botwork", tag = "v0.3.13" }
sea-orm = { version = "1.1.20", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
sea-orm-migration = { version = "1.1.20", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
tempfile = "3"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[[test]]
name = "error_mapping"
required-features = ["test-support"]

[[test]]
name = "login_round_trip"
required-features = ["test-support"]

[lints]
workspace = true
