[package]
name = "botwork-cli"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "botwork_cli"
path = "src/lib.rs"

[[bin]]
name = "bw"
path = "src/main.rs"

[dependencies]
botwork-opaque-handshake = { path = "../opaque-handshake" }
botwork-version = { path = "../version" }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
# `humantime::parse_duration` for `--lease 7d` / `--lease 12h`.
humantime = "2"
rand = "0.10"
# Pull rustls-tls explicitly so we don't drag openssl into the
# distroless container shape.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Password prompt (no echo) — matches the vault CLI's choice.
rpassword = "7"
# URL parsing + validation for the --server flag.
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "1.1"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
botwork-test-support = { path = "../test-support" }
serial_test = { workspace = true }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[lints]
workspace = true
