[package]
name = "botwork-config-broker"
version = "0.0.0"
edition = "2021"

[lib]
name = "botwork_config_broker"
path = "src/lib.rs"

[[bin]]
name = "botwork-config-broker"
path = "src/main.rs"

[dependencies]
axum = "0.7"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
