[package]
name = "botwork-config-broker"
version = "0.0.0"
edition = "2021"

[lib]
name = "botwork_config_broker"
path = "src/lib.rs"

[[bin]]
name = "botwork-config-broker"
path = "src/main.rs"

[dependencies]
axum = "0.7"
botwork-entity = { path = "../db/entity" }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
regex = "1"
sea-orm = { version = "1.1.20", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
botwork-bootstrap = { path = "../bootstrap" }
botwork-migration = { path = "../db/migration" }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sea-orm-migration = { version = "1.1.20", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde_yaml = "0.9"
tempfile = "3"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tower = { version = "0.4", features = ["util"] }

[lints]
workspace = true
