[package]
name = "botwork-control-plane"
version = "0.0.0"
edition = "2021"

[lib]
name = "botwork_control_plane"
path = "src/lib.rs"

[[bin]]
name = "botwork-control-plane"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"
axum = "0.7"
envoy-proto = { git = "https://github.com/phlax/envoy-proto-rs", tag = "v0.0.1" }
futures-core = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
prost = "0.13"
prost-types = "0.13"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tower = { version = "0.4", features = ["util"] }
