[package]
name = "botwork-control-plane"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "botwork_control_plane"
path = "src/lib.rs"

[[bin]]
name = "botwork-control-plane"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"
axum = "0.8"
botwork-entity = { path = "../db/entity" }
botwork-version = { path = "../version" }
envoy-proto = { git = "https://github.com/phlax/envoy-proto-rs", tag = "v0.0.1" }
futures-core = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
prost = "0.13"
prost-types = "0.13"
regex = "1"
sea-orm = { version = "1.1.20", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
botwork-bootstrap = { path = "../bootstrap" }
botwork-migration = { path = "../db/migration" }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sea-orm = { version = "1.1.20", default-features = false, features = ["mock"] }
sea-orm-migration = { version = "1.1.20", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde_yaml = "0.9"
tempfile = "3"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
