[package]
name = "botwork-ctl"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "botwork_ctl"
path = "src/lib.rs"

[[bin]]
name = "botctl"
path = "src/main.rs"

[dependencies]
# RFE #106 PR4: `botctl bootstrap` parses the same yaml the old
# bootstrap binary parsed (via api-core) and POSTs through api.
# api-core stays sea-orm-free so we don't drag the DB stack into the
# operator tool.
botwork-api-core = { path = "../api-core" }
botwork-version = { path = "../version" }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `botctl mcp-probe` reads + validates `mcp-package.yaml`. The
# api-core validator is yaml-shaped, so the loader side stays yaml.
# Matches api-core's serde_yaml pin so the parser is shared from the
# dep cache.
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
# wiremock stubs api so the bootstrap-subcommand tests don't
# need a real broker. Matches the pattern api itself uses
# against control-plane (botworkz/botwork#112).
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# RFE #105 round-3 cleanup: `botctl ps` now consumes
# session-broker's `GET /sessions` HTTP endpoint instead of reading
# the retired `/var/lib/botwork/sessions.json` file. The deserialiser
# tests stand up a small in-process HTTP server (same shape
# control-plane uses for its recovery_test); these are the runtime
# pieces that fake-server needs.
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }

[lints]
workspace = true
