[package]
name = "botwork-launcher"
version = "0.0.0"
edition = "2021"

[lib]
name = "botwork_launcher"
path = "src/lib.rs"

[[bin]]
name = "botwork-launcher"
path = "src/main.rs"

[dependencies]
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
libsystemd = "^0.7"
regex = "1"
serde_json = ">=1, <1.0.133"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }

[dev-dependencies]
tempfile = "3"
